RESOLVED FIXED136573
REGRESSION(r173272): Two blob tests failing on WK1
https://bugs.webkit.org/show_bug.cgi?id=136573
Summary REGRESSION(r173272): Two blob tests failing on WK1
Antti Koivisto
Reported 2014-09-05 05:14:29 PDT
http/tests/fileapi/blob-url-in-subframe.html http/tests/security/mixedContent/blob-url-in-iframe.html http://build.webkit.org/results/Apple%20Mavericks%20Debug%20WK1%20(Tests)/r173272%20(7445)/results.html
Attachments
patch (3.20 KB, patch)
2014-09-05 05:19 PDT, Antti Koivisto
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion (591.52 KB, application/zip)
2014-09-05 07:07 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion (592.99 KB, application/zip)
2014-09-05 08:14 PDT, Build Bot
no flags
patch 3 (3.27 KB, patch)
2014-09-05 09:46 PDT, Antti Koivisto
ap: review+
Antti Koivisto
Comment 1 2014-09-05 05:19:41 PDT
Csaba Osztrogonác
Comment 2 2014-09-05 05:27:03 PDT
Comment on attachment 237685 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=237685&action=review > Source/WebCore/ChangeLog:3 > + REGRESSION(r136534): Two blob tests failing on WK1 you meant r173306 or bug136534
Antti Koivisto
Comment 3 2014-09-05 06:26:57 PDT
I meant r173272
Csaba Osztrogonác
Comment 4 2014-09-05 06:28:48 PDT
(In reply to comment #3) > I meant r173272 Good point, I copied the revision number of followup fix.
Build Bot
Comment 5 2014-09-05 07:07:50 PDT
Comment on attachment 237685 [details] patch Attachment 237685 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4537159134478336 New failing tests: http/tests/appcache/main-resource-redirect.html http/tests/appcache/load-from-appcache-defer-resume-crash.html http/tests/appcache/crash-when-navigating-away-then-back.html http/tests/appcache/main-resource-hash.html http/tests/appcache/top-frame-2.html http/tests/appcache/reload.html http/tests/appcache/top-frame-4.html http/tests/appcache/history-test.html http/tests/appcache/cyrillic-uri.html webarchive/loading/object.html http/tests/appcache/offline-access.html http/tests/appcache/top-frame-3.html http/tests/appcache/local-content.html http/tests/appcache/xhr-foreign-resource.html
Build Bot
Comment 6 2014-09-05 07:07:54 PDT
Created attachment 237688 [details] Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 7 2014-09-05 08:14:29 PDT
Comment on attachment 237685 [details] patch Attachment 237685 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6465930162864128 New failing tests: http/tests/appcache/main-resource-redirect.html http/tests/appcache/load-from-appcache-defer-resume-crash.html http/tests/appcache/crash-when-navigating-away-then-back.html http/tests/appcache/main-resource-hash.html http/tests/appcache/top-frame-2.html http/tests/appcache/reload.html http/tests/appcache/top-frame-4.html http/tests/appcache/history-test.html http/tests/appcache/cyrillic-uri.html webarchive/loading/object.html http/tests/appcache/offline-access.html http/tests/appcache/top-frame-3.html http/tests/appcache/local-content.html http/tests/appcache/xhr-foreign-resource.html
Build Bot
Comment 8 2014-09-05 08:14:33 PDT
Created attachment 237692 [details] Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Antti Koivisto
Comment 9 2014-09-05 09:46:12 PDT
Alexey Proskuryakov
Comment 10 2014-09-05 09:51:56 PDT
Comment on attachment 237697 [details] patch 3 r=me. Probably makes sense to let EWS run, this code is unpredictable.
Antti Koivisto
Comment 11 2014-09-05 11:23:59 PDT
Note You need to log in before you can comment on or make changes to this bug.