REGRESSION(r173272): Two blob tests failing on WK1 https://bugs.webkit.org/show_bug.cgi?id=136573

Reviewed by Alexey Proskuryakov.

http/tests/fileapi/blob-url-in-subframe.html
http/tests/security/mixedContent/blob-url-in-iframe.html

* platform/network/BlobResourceHandle.cpp:
(WebCore::BlobResourceHandle::notifyResponseOnSuccess):

    No need to set this twice.

* platform/network/mac/ResourceResponseMac.mm:
(WebCore::ResourceResponse::initNSURLResponse):

    Also test that it is an HTTP URL before using NSHTTPURLResponse. Blobs create non-HTTP URLs with status codes.
    Pass the accidentally lost expected content length.



Canonical link: https://commits.webkit.org/154376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173314 268f45cc-cd09-0410-ab3c-d52691b4dbfc